# compPhys2_p1

./: .gitignore  make.py  makefile  makefile.py  makefile_backup  report.aux  tags
Hamiltonian/: Hamiltonian.cpp  Hamiltonian.h  HarmonicOscillator.cpp  HarmonicOscillator.h  HarmonicOscillatorAna.cpp  HarmonicOscillatorAna.h  HarmonicOscillatorInteracting.cpp  HarmonicOscillatorInteracting.h  makefile
InitialState/: InitialState.cpp  InitialState.h  RandomUniform.cpp  RandomUniform.h  makefile
Sampler/: Progress.h  ProgressBar.cpp  ProgressBar.h  Sampler.cpp  Sampler.h  Timer.h  makefile
System/: Particle.cpp  Particle.h  Sampler.cpp  Sampler.h  System.cpp  System.h  Timer.cpp  Timer.h  makefile
VMCSolver/: VMCSolver.cpp  VMCSolver.h
WaveFunction/: TrialWaveFunction.cpp  TrialWaveFunction.h  TrialWaveFunctionAna.cpp  (+4 more)
program/: CMakeLists.txt  README.md  make.py
program/Hamiltonian/: HarmonicOscillator.cpp  HarmonicOscillator.h  HarmonicOscillatorAna.cpp  HarmonicOscillatorInteracting.cpp  HarmonicOscillatorInteracting.h
program/InitialState/: InitialState.h  RandomUniform.cpp  RandomUniform.h
program/Sampler/: Sampler.cpp  Sampler.h  Timer.h
program/System/: Particle.cpp  System.cpp  System.h
program/WaveFunction/: TrialWaveFunction.cpp  TrialWaveFunction.h  TrialWaveFunctionAna.cpp  TrialWaveFunctionAna.h  TrialWaveFunctionInteracting.cpp  TrialWaveFunctionInteracting.h  WaveFunction.cpp  WaveFunction.h  makefile
program/data/: ReadFile.cpp  ReadFile.h  Statistics.cpp  Statistics.h  block.x  blocked.out  blocking.cpp  blocking.py  energies.out  main.cpp  makefile  outBlock.out
program/data/benchmark/: benchmark.py
program/data/benchmark/hastings/: 1e6anad1p1  1e6anad1p10  1e6anad1p100  1e6anad1p500  1e6anad2p1  1e6anad2p10  1e6anad2p100  1e6anad2p500  1e6anad3p1  1e6anad3p10  1e6anad3p100  1e6anad3p500  1e6numd1p1  1e6numd1p10  1e6numd1p100  1e6numd1p500  1e6numd3p1  1e6numd3p100  1e6numd3p500
program/data/benchmark/imp/: 1e6anad1p1  1e6anad1p10  1e6anad1p100  1e6anad1p500  1e6anad2p1  1e6anad2p10  1e6anad2p100  1e6anad2p500  1e6anad3p1  1e6anad3p10  1e6anad3p100  1e6anad3p500  1e6numd1p100  1e6numd1p500  1e6numd2p10  1e6numd2p100  1e6numd2p500  1e6numd3p1
program/data/benchmark/tables/: hastings_ana1dim.tex  hastings_ana2dim.tex  hastings_ana3dim.tex  hastings_num2dim.tex  imp_ana1dim.tex  imp_ana2dim.tex  imp_num3dim.tex
program/main/: main.cpp
(+281 files in other folders)
